ver flex-wrap, fixed position, hover

--- a/style.css
+++ b/style.css
@@ -48,16 +48,17 @@ p {
 
 .info {
     flex-wrap: wrap;
-    width: 1100px;
+    width: 100%;
     margin: 0px;
+    justify-content: center;
     display: flex
 }
 
 article {
     background-color: #93B9C0;
-    padding: 10px;
-    width: 400px;
-    margin: 8px;
+    padding: 20px;
+    width: 500px;
+    margin: 20px;
 }
 
 .article-but {
@@ -65,25 +66,65 @@ article {
     background-color: #2E616B;
     color: white;
     font-size: 24px;
-    text-align: center;
     padding: 10px 75px 10px 75px;
-    margin-left: 80px;
+    margin-left: 130px;
+    
+}
+
+.article-but:hover {
+    background-color: white;
+    color: #2E616B; 
+}
+
+article h2 {
+    text-align: center;
+}
+
+.full-image {
+    margin: 100px 0px 100px 0px;
+}
+
+.social {
+    display: block;
+
 }
 
 footer {
     background-color: #598C96;
-    padding: 10px;
     display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 30px 30px 20px 45px;
 }
 
-footer a {
-    margin-right: 10px;
-}
-
-footer p {
+.footer-text {
     font-size: 24px;
+    margin-right: 30px;
 }
 
-article h2 {
-    margin-left: 30px
+.footer-text span {
+    color: white;
+    font-weight: bolder;
+}
+
+.Promotion {
+    background-color: #598C96;
+    color: #93B9C0;
+    position: fixed;
+    top: 200px;
+    right: 0px;
+    width: 150px;
+    height: 250px; 
+}
+
+.Promotion p {
+    font-size: 20px;
+}
+
+.Promotion p:hover {
+    color: white;
+}
+
+.Promotion p, .social img {
+    margin: 10px;
 }
